--- a/productdesc.html
+++ b/productdesc.html
@@ -6,6 +6,8 @@
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@500;700&display=swap" rel="stylesheet">
   <script src="https://cdn.jsdelivr.net/npm/@supabase/supabase-js@2"></script>
+  <script src="https://cdn.jsdelivr.net/npm/@supabase/supabase-js@2"></script>
+  <script src="https://checkout.razorpay.com/v1/checkout.js"></script>
   <style>
     body { font-family: 'Montserrat', Arial, sans-serif; background: #f8fbfd; margin: 0; color: #222; }
     .header { background: linear-gradient(90deg, #232f3e 70%, #0070f3 100%); color: #fff; padding: 1rem 2rem; display: flex; justify-content: space-between; align-items: center; box-shadow: 0 3px 10px #232f3e44; }
@@ -142,6 +144,30 @@
     font-size: 1.3rem;
   }
 }
+.share-btn {
+  background: linear-gradient(90deg, #36d1c4 0%, #1976d2 100%);
+  color: #fff;
+  border: none;
+  border-radius: 7px;
+  cursor: pointer;
+  font-weight: bold;
+  font-size: 1.05rem;
+  padding: 10px 22px;
+  display: flex;
+  align-items: center;
+  gap: 6px;
+  transition: background 0.15s;
+}
+.share-btn svg {
+  width: 18px;
+  height: 18px;
+  margin-right: 6px;
+  vertical-align: middle;
+}
+.share-btn:hover {
+  background: #0070f3;
+  opacity: 0.9;
+}
 .img-modal-arrow {
   position: absolute;
   top: 50%;
@@ -161,6 +187,7 @@
   align-items: center;
   justify-content: center;
 }
+
   </style>
 </head>
 <body>
@@ -196,7 +223,17 @@
         <input type="number" id="quantityInput" value="1" min="1" />
       </div>
       <button class="add-cart-btn" id="addToCartBtn">Add to Cart</button>
+      <button class="add-cart-btn" id="buyNowBtn" >Buy Now</button>
+      <button class="share-btn" id="shareBtn" title="Share">
+        <svg xmlns="http://www.w3.org/2000/svg" width="18" height="18" style="margin-right:6px;vertical-align:middle;" fill="white">
+          <path d="M18 16.08c-.76 0-1.44.3-1.96.77l-7.15-4.18a2.49 2.49 0 0 0 0-1.33l7.15-4.18A2.5 2.5 0 1 0 18 7.92c.45 0 .89.09 1.29.26l-7.15 4.18a2.5 2.5 0 0 0 0 1.33l7.15 4.18A2.5 2.5 0 1 0 18 16.08z"/>
+        </svg>
+        Share
+      </button>
+
+
     </div>
+
   </section>
 
   <section class="section">
@@ -490,6 +527,146 @@ document.addEventListener('keydown', function(e){
       tbody.appendChild(tr);
     });
   }
+document.getElementById('buyNowBtn').addEventListener('click', async () => {
+  if (!productData || productData.stock <= 0) {
+    alert("Product out of stock!");
+    return;
+  }
+  const qty = parseInt(document.getElementById('quantityInput').value) || 1;
+
+  const { data: user } = await supabase.auth.getUser();
+  if (!user.user) {
+    alert("Please login first.");
+    window.location.href = "login.html";
+    return;
+  }
+  customerId = user.user.id;
+
+  // First, insert or update cart entry for this product and user
+  try {
+    // Check if cart entry exists
+    const { data: existingEntry } = await supabase
+      .from('cart')
+      .select('id, quantity')
+      .eq('customer_id', customerId)
+      .eq('product_id', productId)
+      .maybeSingle();
+
+    let cartId;
+    if (existingEntry) {
+      // Update quantity by adding new qty
+      const newQty = existingEntry.quantity + qty;
+      const { error: updateError } = await supabase
+        .from('cart')
+        .update({ quantity: newQty })
+        .eq('id', existingEntry.id);
+      if (updateError) throw updateError;
+      cartId = existingEntry.id;
+    } else {
+      // Insert new cart entry
+      const { data: insertedData, error: insertError } = await supabase
+        .from('cart')
+        .insert([{ customer_id: customerId, product_id: productId, quantity: qty }])
+        .select()
+        .single();
+      if (insertError) throw insertError;
+      cartId = insertedData.id;
+    }
+
+    // Use cartId to proceed with payment just like cart payment flow
+    processPaymentForCartItem(cartId, productData.price, qty, productId, productData.seller_id, productData.gst_rate, productData.accept_cod);
+
+  } catch (error) {
+    alert("Failed to add to cart or initiate payment: " + (error.message || error));
+  }
+});
+
+// Payment flow reused from your cart page logic with COD check & Razorpay integration
+async function processPaymentForCartItem(cartId, price, quantity, productId, sellerId, gstRate, acceptCod) {
+  const totalAmount = price * quantity;
+
+  if (totalAmount <= 0) {
+    alert('Invalid amount to pay.');
+    return;
+  }
+
+  if (acceptCod) {
+    const useCod = confirm('Cash on Delivery is available for this product.\nPress OK for Cash on Delivery or Cancel for Online Payment.');
+    if (useCod) {
+      placeOrderAndClearCart(cartId, price, quantity, productId, sellerId, gstRate, totalAmount, null, 'cod');
+      return;
+    }
+  }
+
+  try {
+    const options = {
+      key: 'rzp_live_RS6JXqKrLXCdOh',
+      amount: totalAmount * 100,
+      currency: 'INR',
+      name: 'MyShop',
+      description: `Payment for ${quantity} x ${productId}`,
+      handler: async function (response) {
+        await placeOrderAndClearCart(cartId, price, quantity, productId, sellerId, gstRate, totalAmount, response.razorpay_payment_id, 'online');
+      },
+      theme: { color: '#0070f3' }
+    };
+
+    const rzp = new Razorpay(options);
+    rzp.open();
+  } catch (error) {
+    alert('Payment initialization error: ' + error.message);
+  }
+}
+
+// Use your existing placeOrder logic for order creation, stock update, and cart cleanup.
+async function placeOrderAndClearCart(cartId, price, quantity, productId, sellerId, gstRate, totalAmount, paymentId, paymentMethod) {
+  try {
+    const orderStatus = paymentMethod === 'cod' ? 'pending' : 'paid';
+
+    const { data: order, error: orderError } = await supabase
+      .from('orders')
+      .insert([{ customer_id: customerId, total: totalAmount, payment_id: paymentId, status: orderStatus }])
+      .select()
+      .single();
+    if (orderError) throw orderError;
+
+    const { error: orderItemError } = await supabase.from('order_items')
+      .insert([{
+        order_id: order.id,
+        product_id: productId,
+        seller_id: sellerId,
+        quantity: quantity,
+        price: price,
+        gst_rate: gstRate,
+        status: paymentMethod === 'cod' ? 'pending' : 'confirmed'
+      }]);
+    if (orderItemError) throw orderItemError;
+
+    // Update stock
+    const stockRes = await supabase.from('products').select('stock').eq('id', productId).single();
+    let currentStock = stockRes.data?.stock ?? 0;
+    const newStock = currentStock - quantity;
+    if (newStock >= 0) {
+      await supabase.from('products').update({ stock: newStock }).eq('id', productId);
+    }
+
+    // Remove cart item
+    await supabase.from('cart').delete().eq('id', cartId);
+
+    alert(`Order placed successfully (${paymentMethod === 'cod' ? 'Cash on Delivery' : 'Online Payment'})`);
+  } catch (error) {
+    alert('Order processing error: ' + (error.message || error));
+  }
+}
+
+  document.getElementById('shareBtn').addEventListener('click', () => {
+    const url = window.location.href;
+    navigator.clipboard.writeText(url).then(() => {
+      alert('Product URL copied to clipboard!');
+    }).catch(() => {
+      alert('Failed to copy URL, please copy manually: ' + url);
+    });
+  });
 
   loadProduct();
 </script>
