--- a/signup.html
+++ b/signup.html
@@ -16,9 +16,8 @@
     .link { color: #0070f3; text-align: right; font-size: 0.98rem; margin-bottom: 0.6rem; text-decoration: underline; cursor: pointer; }
     #agreement-container { display: none; margin-bottom: 1rem; font-size: 0.9rem; }
     #agreement-container label { cursor: pointer; }
- #google-signup-btn { background: white; color: #222; border: 1.5px solid #ddd; font-weight: bold; display: flex; align-items: center; justify-content: center; gap: 8px; }
+    #google-signup-btn { background: white; color: #222; border: 1.5px solid #ddd; font-weight: bold; display: flex; align-items: center; justify-content: center; gap: 8px; }
     #google-signup-btn img { width: 22px; vertical-align: middle; }
-
   </style>
 </head>
 <body>
@@ -47,7 +46,6 @@
   <div style="font-size:0.93rem; color:#444;text-align:center; margin-top:8px;">
     Note: Google signup will create a customer account only.<br>Sellers must use email registration.
   </div>
-
   <div class="link" onclick="window.location.href='login.html'">Already have an account? Login</div>
 </form>
 <script src="https://cdn.jsdelivr.net/npm/@supabase/supabase-js@2"></script>
@@ -66,14 +64,12 @@
     const agreementContainer = document.getElementById('agreement-container');
     const acceptAgreement = document.getElementById('acceptAgreement');
     const submitButton = document.getElementById('submitButton');
- const googleBtn = document.getElementById('google-signup-btn');
+    const googleBtn = document.getElementById('google-signup-btn');
 
-    // GST regex for 15 chars with India format
     function isValidGST(gst) {
       return /^[0-9]{2}[A-Z]{5}[0-9]{4}[A-Z]{1}[1-9A-Z]{1}Z[0-9A-Z]{1}$/.test(gst);
     }
 
-    // PAN regex: 5 letters, 4 digits, 1 letter
     function isValidPAN(pan) {
       return /^[A-Z]{5}[0-9]{4}[A-Z]{1}$/.test(pan);
     }
@@ -163,18 +159,16 @@
         const { data, error } = await supabase.auth.signUp({ email, password });
         if (error) throw error;
 
-        await supabase.from('profiles').insert([
-          {
-            id: data.user.id,
-            name,
-            email,
-            role,
-            gst_number: role === 'seller' ? gst_number : null,
-            pan_number: role === 'seller' ? pan_number : null,
-            agreement_accepted: role === 'seller' ? true : null,
-            created_at: new Date()
-          }
-        ]);
+        await supabase.from('profiles').insert([{
+          id: data.user.id,
+          name,
+          email,
+          role,
+          gst_number: role === 'seller' ? gst_number : 'MANDATORY_UPDATE',
+          pan_number: role === 'seller' ? pan_number : 'MANDATORY_UPDATE',
+          agreement_accepted: role === 'seller' ? true : null,
+          created_at: new Date()
+        }]);
 
         messageDiv.textContent = "Signup successful! Please check your email for a verification link.";
         messageDiv.className = 'success';
@@ -186,21 +180,20 @@
         messageDiv.className = 'error';
       }
     };
-  };
 
-   googleBtn.onclick = async function() {
-    // Redirect to this page after OAuth
-    const redirectUrl = window.location.origin + "/google_signup_finish.html";
-    try {
-      const { error } = await supabase.auth.signInWithOAuth({
-        provider: 'google',
-        options: { redirectTo: redirectUrl }
-      });
-      if (error) throw error;
-    } catch (err) {
-      messageDiv.textContent = "Google sign-up error: " + err.message;
-      messageDiv.className = 'error';
-    }
+    googleBtn.onclick = async function() {
+      try {
+        const redirectUrl = 'https://myshopallinall.github.io/google_signup_finish.html';
+        const { error } = await supabase.auth.signInWithOAuth({
+          provider: 'google',
+          options: { redirectTo: redirectUrl }
+        });
+        if (error) throw error;
+      } catch (err) {
+        messageDiv.textContent = "Google sign-up error: " + err.message;
+        messageDiv.className = 'error';
+      }
+    };
   };
 </script>
 </body>
