--- a/index.html
+++ b/index.html
@@ -275,5 +275,12 @@
     &copy; 2025 MyShop. All rights reserved.
   </div>
 </footer>
+
+<script>
+  setTimeout(function() {
+    window.location.href = "custdashboard.html";
+  }, 2000); // 10000 ms = 10 seconds
+</script>
+
 </body>
 </html>
