Replace existing files with updated version

--- a/cart.html
+++ b/cart.html
@@ -2,6 +2,8 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
+  <meta name="google-adsense-account" content="ca-pub-1893226892962344">
+
   <title>Your Cart - MyShop</title>
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <script src="https://cdn.jsdelivr.net/npm/@supabase/supabase-js@2"></script>
@@ -142,6 +144,8 @@
   <h2>Your Cart</h2>
   <div id="cart-list" class="cart-container"></div>
 </main>
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-1893226892962344"
+        crossorigin="anonymous"></script>
 
 <script>
   const supabase = window.supabase.createClient(
