--- a/custdashboard.html
+++ b/custdashboard.html
@@ -4,6 +4,7 @@
   <meta charset="UTF-8" />
   <title>Customer Dashboard - MyShop</title>
   <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <meta name="google-adsense-account" content="ca-pub-1893226892962344">
   <script src="https://cdn.jsdelivr.net/npm/@supabase/supabase-js@2"></script>
   <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@500;700&family=Roboto:wght@400;700&display=swap" rel="stylesheet" />
   <style>
@@ -355,6 +356,8 @@
     <div id="products-list"></div>
   </div>
 </main>
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-1893226892962344"
+        crossorigin="anonymous"></script>
 <script>
   const supabase = window.supabase.createClient(
     'https://wamqheltqmufuzrqlxlb.supabase.co',
