--- a/index.html
+++ b/index.html
@@ -275,6 +275,8 @@
     &copy; 2025 MyShop. All rights reserved.
   </div>
 </footer>
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-1893226892962344"
+        crossorigin="anonymous"></script>
 
 <script>
   setTimeout(function() {
