--- a/order.html
+++ b/order.html
@@ -3,6 +3,8 @@
 <head>
   <meta charset="UTF-8" />
   <title>Your Orders - MyShop</title>
+  <meta name="google-adsense-account" content="ca-pub-1893226892962344">
+
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <script src="https://cdn.jsdelivr.net/npm/@supabase/supabase-js@2"></script>
   <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;600;700&display=swap" rel="stylesheet" />
@@ -187,8 +189,12 @@
   <h2>Your Orders</h2>
   <div id="orders-list"></div>
 </main>
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-1893226892962344"
+        crossorigin="anonymous"></script>
+
 <script>
-  const DELIVERY_STATUSES = [
+  const DELIVERY_
+  STATUSES = [
     "placed", "shipped", "couriered", "dispatched", "delivered"
   ];
   const supabase = window.supabase.createClient('https://wamqheltqmufuzrqlxlb.supabase.co','eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpc3MiOiJzdXBhYmFzZSIsInJlZiI6IndhbXFoZWx0cW11ZnV6cnFseGxiIiwicm9sZSI6ImFub24iLCJpYXQiOjE3NjEwOTQxMzAsImV4cCI6MjA3NjY3MDEzMH0.xFtK5p22bHNzWcGXUgRUR5f-Q4SGdQperlPf4ItD2sY');
