--- a/productdesc.html
+++ b/productdesc.html
@@ -4,6 +4,8 @@
   <meta charset="UTF-8" />
   <title>Product Details - MyShop</title>
   <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <meta name="google-adsense-account" content="ca-pub-1893226892962344">
+
   <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@500;700&display=swap" rel="stylesheet">
   <script src="https://cdn.jsdelivr.net/npm/@supabase/supabase-js@2"></script>
   <script src="https://cdn.jsdelivr.net/npm/@supabase/supabase-js@2"></script>
@@ -285,6 +287,8 @@
     </div>
   </section>
 </main>
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-1893226892962344"
+        crossorigin="anonymous"></script>
 
 <script>
   const supabase = window.supabase.createClient(
