--- a/profile.html
+++ b/profile.html
@@ -2,6 +2,8 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
+  <meta name="google-adsense-account" content="ca-pub-1893226892962344">
+
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>Update Profile - MyShop</title>
   <style>
@@ -211,6 +213,8 @@
   <button type="submit">Save</button>
   <button type="button" id="delete-account">Delete Account</button>
 </form>
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-1893226892962344"
+        crossorigin="anonymous"></script>
 
 <script src="https://cdn.jsdelivr.net/npm/@supabase/supabase-js@2"></script>
 <script>
