--- a/customer_return.html
+++ b/customer_return.html
@@ -156,6 +156,7 @@
   </style>
 </head>
 <body>
+
 <div class="container">
   <h1>My Orders</h1>
   <div style="margin-bottom: 23px; color:#4d5e7e;">
@@ -165,6 +166,8 @@
   <div id="msg" class="msg"></div>
   <div class="order-list" id="orderItemsBody"></div>
 </div>
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-1893226892962344"
+        crossorigin="anonymous"></script>
 
 <script>
   const supabase = window.supabase.createClient(
