--- a/invoice.html
+++ b/invoice.html
@@ -3,6 +3,8 @@
 <head>
   <meta charset="UTF-8" />
   <title>Invoice - MyShop</title>
+  <meta name="google-adsense-account" content="ca-pub-1893226892962344">
+
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@600&display=swap" rel="stylesheet"/>
   <style>
