--- a/login.html
+++ b/login.html
@@ -2,6 +2,8 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
+  <meta name="google-adsense-account" content="ca-pub-1893226892962344">
+
   <title>Login - MyShop</title>
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <style>
@@ -108,6 +110,8 @@
     <div id="reset-message"></div>
   </form>
 </div>
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-1893226892962344"
+        crossorigin="anonymous"></script>
 
 <script src="https://cdn.jsdelivr.net/npm/@supabase/supabase-js@2"></script>
 <script>
