--- a/returnrequest.html
+++ b/returnrequest.html
@@ -162,6 +162,8 @@
   <div id="msg" class="msg"></div>
   <div class="order-list" id="orderItemsBody"></div>
 </div>
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-1893226892962344"
+        crossorigin="anonymous"></script>
 
 <script>
   const supabase = window.supabase.createClient(
