--- a/signup.html
+++ b/signup.html
@@ -2,6 +2,8 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
+  <meta name="google-adsense-account" content="ca-pub-1893226892962344">
+
   <title>Sign Up - MyShop</title>
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <style>
@@ -48,6 +50,9 @@
   </div>
   <div class="link" onclick="window.location.href='login.html'">Already have an account? Login</div>
 </form>
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-1893226892962344"
+        crossorigin="anonymous"></script>
+
 <script src="https://cdn.jsdelivr.net/npm/@supabase/supabase-js@2"></script>
 <script>
   window.onload = function () {
